deployment/k8s/overlays/k3s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voco
  namespace: voco
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "voco-backend"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.voco-online.ru
      secretName: voco-web-tls
  rules:
    - host: www.voco-online.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: voco-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voco-frontend
                port:
                  number: 80
